--- a/CrapsTableWPF/MainWindow.xaml
+++ b/CrapsTableWPF/MainWindow.xaml
@@ -1,28 +1,26 @@
 ﻿<Window x:Class="CrapsTableWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CrapsTableWPF"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1600"
+        xmlns:svg="clr-namespace:SharpVectors.Converters;assembly=SharpVectors.Converters.Wpf"
+        Title="Craps Table" Height="1000" Width="1600"
         Background="ForestGreen">
-    <Grid Margin="0,0,0,0">
-        <Image Margin="0,0,280,157" Source="temp_background.png" Stretch="Uniform"/>
 
-        <Path x:Name="DropZone01" 
-              Data="M10,10 L200,10 L200,100 L10,100 Z"
-              Fill="#40FF0000" Stroke="Red"
-              AllowDrop="True"
-              DragEnter="Region_DragEnter"
-              Drop="Region_Drop"
-              MouseLeftButtonDown="Region_Click" Margin="35,712,896,176" Stretch="Fill"
-              />
+    <Grid>
+        <!-- UI Elements -->
         <Button Content="New Player" HorizontalAlignment="Left" Margin="1360,104,0,0" VerticalAlignment="Top" Height="40" Width="200" Click="NewPlayerButtonClick"/>
         <TextBox x:Name="PlayerNameInputTextBox" HorizontalAlignment="Left" Margin="1360,74,0,0" TextWrapping="Wrap" Text="New Player Name" VerticalAlignment="Top" Width="200"/>
         <Button Content="Add money" HorizontalAlignment="Left" Margin="1360,184,0,0" VerticalAlignment="Top" Height="40" Width="200" Click="AddMoneyButtonClick"/>
         <TextBox x:Name="MoneyInputTextBox" HorizontalAlignment="Left" Margin="1360,156,0,0" TextWrapping="Wrap" Text="Amount to Add" VerticalAlignment="Top" Width="200"/>
 
-
+        <!-- SVG in foreground, scales to window -->
+        <Viewbox Stretch="Uniform"
+         HorizontalAlignment="Center"
+         VerticalAlignment="Center"
+         Panel.ZIndex="100">
+            <svg:SvgViewbox Source="background.svg"
+                    IsHitTestVisible="False"
+                    MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Window}}"
+                    MaxHeight="{Binding ActualHeight, RelativeSource={RelativeSource AncestorType=Window}}" Width="6583"/>
+        </Viewbox>
     </Grid>
 </Window>
